# gmail-generator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/app/: globals.css
src/components/: BulkInput.tsx  CustomVariationsInput.tsx  EmailInput.tsx  GmailGenerator.tsx  GmailHeader.tsx  InfoDialog.tsx  ResetDialog.tsx  TabsContainer.tsx  VariationsControls.tsx  VariationsManager.tsx  VariationsResult.tsx  VariationsResultTabs.tsx  ViewToggle.tsx  mode-toggle.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: loading-spinner.tsx  toast.tsx  tooltip.tsx
src/lib/: email-generator.ts  utils.ts
src/types/: email.ts  tauri.d.ts
