[package]
name = "gmail-generator"
version = "0.0.1"
description = "Gmail Generator App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [
    "clipboard-all",
    "dialog-all", 
    "fs-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
